Fixed dark mode elements.

--- a/assets/base.css
+++ b/assets/base.css
@@ -8,7 +8,7 @@
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
-  --vt-c-black-lightest: #7D7D7D;
+  --vt-c-black-lightest: #424242;
 
   --vt-c-indigo: #2c3e50;
   --vt-c-indigo-hsl: hsl(210 29% 24% / 100);
@@ -58,6 +58,7 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
+  --color-text-lightest: var(--vt-c-text-light-2);
   --color-text-inverted: var(--vt-c-amber-brightest);
   --color-text-inverted-lightest: var(--vt-c-amber-dark);
 
@@ -90,6 +91,7 @@
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
+    --color-text-lightest: var(--vt-c-text-dark-2);
 
     --color-action-background: var(--vt-c-green-dark);
     --color-action-hover: var(--vt-c-green-soft);
